Adjust menus; add Berkeley Lab logo to footer

--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -1,6 +1,11 @@
 <footer class="md-footer">
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
+
+            <a href="." title="Lawrence Berkeley National Laboratory" class="md-footer__button md-logo" aria-label="Lawrence Berkeley National Laboratory" data-md-component="logo">
+                <img src="assets/berkeleylab.png" alt="logo">
+            </a>
+
             <div class="md-copyright">
                 <a href="https://scienceit.lbl.gov">Science IT</a> - <a href="https://it.lbl.gov">IT Division</a> - <a href="https://lbl.gov">Lawrence Berkeley National Laboratory</a>    
             </div>
