--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="md-footer-meta__inner md-grid">
 
             <a href="." title="Lawrence Berkeley National Laboratory" class="md-footer__button md-logo" aria-label="Lawrence Berkeley National Laboratory" data-md-component="logo">
-                <img src="assets/berkeleylab.png" alt="logo">
+                <img src="/assets/berkeleylab.png" alt="logo" />
             </a>
 
             <div class="md-copyright">
