--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -18,7 +18,7 @@
 }
 
 .md-grid {
-  max-width: 900px; 
+  max-width: 1280px; 
 }
 
 .md-content a {
@@ -53,6 +53,15 @@
 .news {
   background-color:#B0DFF1;
   padding: 20px;
+  border-radius: 20px;
+}
+
+iframe {
+  display: block;       /* iframes are inline by default */
+  background: #000;
+  border: none;         /* Reset default border */
+  height: 100vh;        /* Viewport-relative units */
+  width: 100vw;
 }
 
 :root {
