--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -7,7 +7,7 @@
             </a>
 
             <div class="md-copyright">
-                <a href="https://scienceit.lbl.gov">Science IT</a> - <a href="https://it.lbl.gov">IT Division</a> - <a href="https://lbl.gov">Lawrence Berkeley National Laboratory</a>    
+                <a href="https://scienceit.lbl.gov">Science IT</a> - <a href="https://it.lbl.gov">IT Division</a> - <a href="https://lbl.gov">Lawrence Berkeley National Laboratory</a> | <a href="https://www.lbl.gov/terms-and-conditions/" target="_blank">Privacy & Security Notice</a>
             </div>
         </div>
     </div>
