--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,9 @@
+:root {
+  --md-primary-fg-color--dark: #007681;
+  --md-primary-fg-color--light: #B1B3B3;
+  --md-primary-fg-color:  #00313C;
+}
+
 .md-header__button.md-logo img {
   width: 100px;
   height: auto;
@@ -26,10 +32,11 @@
   font-weight: bold;
 }
 
-.md-content a:hover {
+.md-content a:hover, .md-nav__link[href]:focus, .md-nav__link[href]:hover {
   text-decoration: underline;
   color: var(--md-primary-fg-color--dark);
 }
+
 
 .md-announce a {
   color: white;
@@ -41,14 +48,16 @@
   color: white;
 }
 
+/*
 .md-mission {
-  //border-radius: 20px;
+  border-radius: 20px;
   max-width: 800px; 
-  //color: white;
-  //background-image: linear-gradient(#007681, #00313C);
-  //background-color: var(--md-primary-fg-color--light);
-  //padding: 20px;
+  color: white;
+  background-image: linear-gradient(#007681, #00313C);
+  background-color: var(--md-primary-fg-color--light);
+  padding: 20px;
 }
+*/
 
 .news {
   background-color:#B0DFF1;
@@ -62,13 +71,6 @@ iframe {
   border: none;         /* Reset default border */
   height: 100vh;        /* Viewport-relative units */
   width: 100vw;
-}
-
-:root {
-  --md-primary-fg-color--dark: #007681;
-  --md-primary-fg-color--light: #B1B3B3;
-  --md-primary-fg-color:  #00313C;
-//  --md-header-font: "Montserrat"
 }
 
 .md-banner {
