Update logo link in the footer

--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
 
-            <a href="." title="Lawrence Berkeley National Laboratory" class="md-footer__button md-logo" aria-label="Lawrence Berkeley National Laboratory" data-md-component="logo">
+            <a href="https://scienceit.lbl.gov" title="Lawrence Berkeley National Laboratory" class="md-footer__button md-logo" aria-label="Lawrence Berkeley National Laboratory" data-md-component="logo">
                 <img src="/scienceit-docs/assets/11_BL_IT_logo_white.png" alt="logo" />
             </a>
 
