set the font-size of admonition to medium; increases readability of faqs and other admonitions

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -101,3 +101,8 @@ iframe {
 .md-banner {
   background-color: var(--md-primary-fg-color--dark);
 }
+
+.md-typeset .admonition,
+.md-typeset details {
+  font-size: medium
+}
